webapp/src/main/webapp/VAADIN/themes/wideweb/styles.css
/* ... */
      div.lesson div.lessonHeader .schoolLevel.Elementary {
        background: url("img/elementary.png") center center no-repeat;
        -webkit-border-radius: 20px;
        -moz-border-radius: 20px;
        -ms-border-radius: 20px;
        -o-border-radius: 20px;
        border-radius: 20px; }
      div.lesson div.lessonHeader .schoolLevel.High_School {
        background: url("img/high_school.png") center center no-repeat;
        -webkit-border-radius: 20px;
        -moz-border-radius: 20px;
        -ms-border-radius: 20px;
        -o-border-radius: 20px;
        border-radius: 20px; }
      div.lesson div.lessonHeader .schoolLevel.Other {
        background: url("img/other.png") center center no-repeat;
        -webkit-border-radius: 20px;
        -moz-border-radius: 20px;
        -ms-border-radius: 20px;
        -o-border-radius: 20px;
        border-radius: 20px; }
      div.lesson div.lessonHeader .schoolLevel.inTest {
        background-color: #ffc000; }
    div.lesson div.lessonHeader .title {
      display: inline-block;
      font-size: 18px;
      font-weight: bold;
      line-height: 20px;
      color: white; }
    div.lesson div.lessonHeader .author {
      line-height: 20px;
      margin-top: 9px;
      margin-right: 9px;
      float: right;
      color: white; }
      div.lesson div.lessonHeader .author a {
        color: white; }
  div.lesson .lessonDetails {
    float: left;
    width: 594px;
    padding: 7px;
    font-family: education;
    background-color: #eeeeee;
    float: left; }
    div.lesson .lessonDetails .source {
      background: url("img/source.png") left center no-repeat;
      padding-left: 45px;
      float: left; }
    div.lesson .lessonDetails img {
      float: right;
      margin-left: 6px; }
    div.lesson .lessonDetails .tags {
      clear: both;
      margin-top: 13px;
      float: left; }
      div.lesson .lessonDetails .tags li {
        font-size: 75%;
        display: inline; }
        div.lesson .lessonDetails .tags li > a {
          font-weight: bold;
          color: #444444; }
  div.lesson .solutionBar .yourSolution input[type="text"] {
    margin-top: 14px;
    font-size: 18px;
    font-family: education;
    font-weight: bold;
    padding-left: 7px;
    width: 280px;
    line-height: 24px;
    float: right;
    border: 1px solid #cccccc;
    color: #444444; }
  div.lesson .solutionBar .yourSolution .buttons {
    float: right; }
    div.lesson .solutionBar .yourSolution .buttons input {
      font-family: education;
      font-size: 18px;
      width: 93px;
      margin-left: 1px;
      margin-top: 11px;
      padding: 5px 0;
      cursor: pointer; }
      div.lesson .solutionBar .yourSolution .buttons input:focus {
        outline: 0; }
      div.lesson .solutionBar .yourSolution .buttons input.submit {
        background-color: #3eb535;
        color: white; }
  div.lesson .solutionBar .links {
    margin-top: 10px;
    float: right;
    clear: right;
    font-family: education;
    color: #aaaaaa;
    text-align: right; }
    div.lesson .solutionBar .links a {
      color: #62abff; }
  div.lesson .theLesson {
    float: left;
    width: 601px;
    padding: 12px 7px 12px 0;
    font-family: education; }

.right > div > ul.ads > li {
  margin-bottom: 15px;
  line-height: 11px;
  cursor: pointer !important; }
  .right > div > ul.ads > li > a {
    font-size: 11px;
    font-family: Tahoma;
    color: #333;
    display: inline-block;
    min-height: 140px; }
  .right > div > ul.ads > li img {
    cursor: pointer !important; }

.left > div > ul.breadcrumb > div > li {
  margin-bottom: 5px;
  cursor: pointer !important;
  overflow: hidden; }
  .left > div > ul.breadcrumb > div > li > a {
    font-size: 14px;
    font-family: education;
    display: inline-block;
    padding: 8px 10px;
    color: white;
    background: #62abff;
    width: 125px; }
    .left > div > ul.breadcrumb > div > li > a.exercise {
      background: #e80c7a;
    }
    .left > div > ul.breadcrumb > div > li > a:hover {
      border-left: 6px solid #ffba00;
      -webkit-transition: all 0.3s ease;
      -moz-transition: all 0.3s ease;
      -o-transition: all 0.3s ease;
      -ms-transition: all 0.3s ease;
      transition: all 0.3s ease; }

input.default, select.default {
  color: #aaa !important; }

.header > div {
  width: 960px;
  margin: 0 auto; }
  .header > div a.logo {
    background: url("img/logo2color.png") no-repeat left center;
    width: 120px;
    height: 47px;
    display: inline-block;
    float: right;
    vertical-align: bottom;
    color: white;
    font-family: education;
    font-size: 12px;
    letter-spacing: 7px;
    -o-transition: background 0.2s ease-in;
    -ms-transition: background 0.2s ease-in;
    -moz-transition: background 0.2s ease-in;
    -webkit-transition: background 0.2s ease-in;
    transition: background 0.2s ease-in;
    margin-top: 3px; }
    .header > div a.logo:hover {
      background-image: url("img/logo2color2.png"); }
  .header > div > ul {
    float: left;
    display: inline;
    height: 50px; }
    .header > div > ul > li {
      display: inline-block; }
      .header > div > ul > li > a {
        font-size: 12px;
        color: white;
        font-family: education; }
  .header > div a.userIco {
    display: inline-block;
    float: right;
    width: 50px;
    height: 50px;
    margin-top: 0px;
    background: #c0d7dd url("img/userIco.png") no-repeat center 1px;
    -o-transition: background 0.2s ease-in;
    -ms-transition: background 0.2s ease-in;
    -moz-transition: background 0.2s ease-in;
    -webkit-transition: background 0.2s ease-in;
    transition: background 0.2s ease-in; }
    .header > div a.userIco:hover {
      background: #ffba00 url("img/userIco.png") no-repeat center 1px; }
    .header > div a.userIco.selected {
      background-color: #459eb4; }
/* ... */

